--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+  color: '#000000';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
